// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders correctly with all selected 1`] = `
<DocumentFragment>
  .cache-1oo5ecx-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb3 {
  width: 32px;
  white-space: nowrap;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-155lc8i-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #521094;
  background: #ece5ff;
  border: 1px solid #ece5ff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-ivzkfp-StyledText-StyledText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-1nbj6rk-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #d9dadd;
  position: relative;
}

.cache-1nbj6rk-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #521094;
  width: 100%;
}

.cache-1kebp2n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #521094;
  border: 1px solid #521094;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1oo5ecx-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-155lc8i-StyledContainer e11loam60"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-1nbj6rk-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-155lc8i-StyledContainer e11loam60"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-1nbj6rk-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-1kebp2n-StyledContainer e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with animation 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-1oo5ecx-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb3 {
  width: 32px;
  white-space: nowrap;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-155lc8i-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #521094;
  background: #ece5ff;
  border: 1px solid #ece5ff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-ivzkfp-StyledText-StyledText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-1nbj6rk-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #d9dadd;
  position: relative;
}

.cache-1nbj6rk-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #521094;
  width: 100%;
}

.cache-1kebp2n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #521094;
  border: 1px solid #521094;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1cc2eyq-StyledLine-loadingStyle {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #d9dadd;
  position: relative;
}

.cache-1cc2eyq-StyledLine-loadingStyle::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #521094;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-rkqn04-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #464959;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-59q0cf-StyledText-StyledText {
  color: #6d717c;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

<div
    class="cache-1oo5ecx-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-155lc8i-StyledContainer e11loam60"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-1nbj6rk-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-1kebp2n-StyledContainer e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-1cc2eyq-StyledLine-loadingStyle e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-rkqn04-StyledContainer e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb2 cache-59q0cf-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-1oo5ecx-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb3 {
  width: 32px;
  white-space: nowrap;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-1kebp2n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #521094;
  border: 1px solid #521094;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-ivzkfp-StyledText-StyledText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-c8r7xc-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #d9dadd;
  position: relative;
}

.cache-c8r7xc-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #521094;
}

.cache-rkqn04-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #464959;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-59q0cf-StyledText-StyledText {
  color: #6d717c;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

<div
    class="cache-1oo5ecx-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-1kebp2n-StyledContainer e11loam60"
      >
        1
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-c8r7xc-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-rkqn04-StyledContainer e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb2 cache-59q0cf-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-c8r7xc-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-rkqn04-StyledContainer e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb2 cache-59q0cf-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with selected prop 1`] = `
<DocumentFragment>
  .cache-1oo5ecx-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb3 {
  width: 32px;
  white-space: nowrap;
}

.cache-1oo5ecx-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-155lc8i-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #521094;
  background: #ece5ff;
  border: 1px solid #ece5ff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-ivzkfp-StyledText-StyledText {
  color: #464959;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-1nbj6rk-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #d9dadd;
  position: relative;
}

.cache-1nbj6rk-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #521094;
  width: 100%;
}

.cache-1kebp2n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #521094;
  border: 1px solid #521094;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-c8r7xc-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #d9dadd;
  position: relative;
}

.cache-c8r7xc-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #521094;
}

.cache-rkqn04-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #464959;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-59q0cf-StyledText-StyledText {
  color: #6d717c;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

<div
    class="cache-1oo5ecx-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-155lc8i-StyledContainer e11loam60"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-1nbj6rk-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-1kebp2n-StyledContainer e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb2 cache-ivzkfp-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-c8r7xc-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb3"
    >
      <div
        class="cache-rkqn04-StyledContainer e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb2 cache-59q0cf-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
